# Impulse

./: .gitignore  CMakeLists.txt  CsvCapture.cpp  CsvCapture.h  Makefile  Makefile.old  Readme.md  band_pass.cpp  filters.cpp  filters.hpp  frame_colors.cpp  machine_learning.cpp  math.txt  options.cpp  options.h  test.cpp
