set(CXXFLAGS=-O2)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED OFF)
set(Boost_USE_STATIC_RUNTIME OFF)
cmake_minimum_required(VERSION 2.8)
project( Impulse )
find_package( OpenCV REQUIRED )
find_package( Boost 1.50 REQUIRED COMPONENTS filesystem system program_options)
include_directories(${Boost_INCLUDE_DIRS})
add_executable( band_pass band_pass.cpp filters.cpp options.cpp )
target_link_libraries( band_pass ${OpenCV_LIBS} ${Boost_LIBRARIES})
